package org.example.TEMARIO_CURSO.TEMA5POO.inmobiliaria;

public class Habitacion {

    private String nombre;
    private double metros;

    public Habitacion (String nombre, double metros){

        this.nombre = nombre;
        this.metros = metros;
    }

    @Override
    public String toString() {
        return "Habitacion{" +
                "nombre='" + nombre + '\'' +
                ", metros=" + metros +
                '}';
    }



    public String getNombre() {
        return nombre;
    }

    public void setNombre(String nombre) {
        this.nombre = nombre;
    }

    public double getMetros() {
        return metros;
    }

    public void setMetros(double metros) {
        this.metros = metros;
    }


}
