@startuml
package "org.example.TEMA5POO.inmobiliaria" {

class Casa {
    -direccion : String
    -listaHabitaciones : ArrayList<Habitacion>
    -propietario : Propietario
    --
    +Casa(direccion : String)
    +crearHabitacion(nombre : String, metros : double)
    +eliminarHabitaciones(nombre : String)
    +mostrarHabitaciones()
    +getHabitacionMasGrande() : Habitacion
    +getListaHabitaciones() : ArrayList<Habitacion>
    +setListaHabitaciones(lista : ArrayList<Habitacion>)
    +getDireccion() : String
    +setDireccion(direccion : String)
    +getPropietario() : Propietario
    +setPropietario()
}

class Habitacion {
    -nombre : String
    -metros : double
    --
    +Habitacion(nombre : String, metros : double)
    +getNombre() : String
    +setNombre(nombre : String)
    +getMetros() : double
    +setMetros(metros : double)
}

class Propietario {
    -nombre : String
    -edad : int
    --
    +Propietario(nombre : String, edad : int)
    +getNombre() : String
    +setNombre(nombre : String)
    +getEdad() : int
    +setEdad(edad : int)
}

class Electrodomestico {
    -nombre : String
    -consumo : double
    --
    +Electrodomestico(nombre : String, consumo : double)
    +getNombre() : String
    +setNombre(nombre : String)
    +getConsumo() : double
    +setConsumo(consumo : double)
}

Casa "1" *--> "0..*" Habitacion : contiene
Casa "1" *-- "1" Propietario : propietario
}

@enduml
